# ctemplate

./: CMakeLists.txt  SETUP
ctemplate/: CMakeLists.txt  ctemplate.cpp  ctemplate.h
src/: CMakeLists.txt  main.c
src/include/: pch.h
test/: CMakeLists.txt  test_main.c
